<resources>
    <string name="app_name">GnuCash</string>
    <string name="title_add_account">Create Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="info_details">Info</string>
    <string name="title_settings">Settings</string>
    <string name="menu_export_ofx">Export OFX</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="label_account_name">Account name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="label_no_transactions_to_display">No transactions to display</string>
    <string name="label_transaction_name">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_timeanddate">DATE &amp; TIME</string>
    <string name="label_account">Account</string>
    <string name="label_debit">DEBIT</string>
    <string name="label_credit">CREDIT</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">DELETE</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="delete_account_confirmation_message">All transactions in this account will also be deleted</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Note</string>
    <string name="menu_move">MOVE</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_transactions_total">Total sum:</string>
    <string name="label_export_destination">Export Destination</string>
    <string name="title_export_dialog">Export OFX</string>
    <string name="option_export_all_transactions">Export all transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="error_exporting">Error exporting OFX data</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string-array name="export_destinations">
        <item>Share file&#8230;</item>
        <item>SD Card</item>
    </string-array>
    <string name="btn_move">Move</string>
    <string name="title_move_transactions">Move %1$d transaction(s)</string>
    <string name="label_move_destination">Destination Account</string>
    <string name="permission_access_sdcard">Access SD Card</string>
    <string name="title_share_ofx_with">Share OFX export with&#8230;</string>
    <string name="key_default_currency">default_currency</string>
    <string name="toast_incompatible_currency">Cannot move transactions.\nThe destination account uses a different currency from origin account</string>
    <string name="header_general_settings">General</string>
    <string name="header_about_gnucash">About</string>
    <string name="title_choose_currency">Choose default currency</string>
    <string name="title_default_currency">Default currency</string>
    <string name="summary_default_currency">Default currency to assign to new accounts</string>
    <string name="label_permission_record_transactions">Enables recording transactions in GnuCash for Android</string>
    <string name="label_permission_create_accounts">Enables creation of accounts in GnuCash for Android</string>
    <string name="label_permission_group">Your GnuCash data</string>
    <string name="description_permission_group">Read and modify GnuCash data</string>
    <string name="label_permission_record_transaction">record transactions</string>
    <string name="label_permission_create_account">create accounts</string>
    <string name="label_display_account">Display account</string>
    <string name="btn_create_accounts">Create Accounts</string>
    <string name="title_default_accounts">Select accounts to create</string>
    <string name="key_first_run">key_first_run</string>
    <string-array name="currency_names">
        <item>Afghani</item>
		<item>Algerian Dinar</item>
		<item>Argentine Peso</item>
		<item>Armenian Dram</item>
		<item>Aruban Florin</item>
		<item>Australian Dollar</item>
		<item>Azerbaijanian Manat</item>
		<item>Bahamian Dollar</item>
		<item>Bahraini Dinar</item>
		<item>Baht</item>
		<item>Balboa</item>
		<item>Barbados Dollar</item>
		<item>Belarussian Ruble</item>
		<item>Belize Dollar</item>
		<item>Bermudian Dollar</item>
		<item>Bolivar Fuerte</item>
		<item>Boliviano</item>
		<item>Brazilian Real</item>
		<item>Brunei Dollar</item>
		<item>Bulgarian Lev</item>
		<item>Burundi Franc</item>
		<item>Canadian Dollar</item>
		<item>Cape Verde Escudo</item>
		<item>Cayman Islands Dollar</item>
		<item>CFA Franc BCEAO</item>
		<item>CFA Franc BEAC</item>
		<item>CFP Franc</item>
		<item>Chilean Peso</item>
		<item>Testing currency</item>
		<item>Colombian Peso</item>
		<item>Comoro Franc</item>
		<item>Congolese Franc</item>
		<item>Convertible Mark</item>
		<item>Cordoba Oro</item>
		<item>Costa Rican Colon</item>
		<item>Croatian Kuna</item>
		<item>Cuban Peso</item>
		<item>Czech Koruna</item>
		<item>Dalasi</item>
		<item>Danish Krone</item>
		<item>Denar</item>
		<item>Djibouti Franc</item>
		<item>Dobra</item>
		<item>Dominican Peso</item>
		<item>Dong</item>
		<item>East Caribbean Dollar</item>
		<item>Egyptian Pound</item>
		<item>El Salvador Colon</item>
		<item>Ethiopian Birr</item>
		<item>Euro</item>
		<item>Falkland Islands Pound</item>
		<item>Fiji Dollar</item>
		<item>Forint</item>
		<item>Ghana Cedi</item>
		<item>Gibraltar Pound</item>
		<item>Gold</item>
		<item>Gourde</item>
		<item>Guarani</item>
		<item>Guinea Franc</item>
		<item>Guyana Dollar</item>
		<item>Hong Kong Dollar</item>
		<item>Hryvnia</item>
		<item>Iceland Krona</item>
		<item>Indian Rupee</item>
		<item>Iranian Rial</item>
		<item>Iraqi Dinar</item>
		<item>Jamaican Dollar</item>
		<item>Jordanian Dinar</item>
		<item>Kenyan Shilling</item>
		<item>Kina</item>
		<item>Kip</item>
		<item>Kuwaiti Dinar</item>
		<item>Kwacha</item>
		<item>Kwanza</item>
		<item>Kyat</item>
		<item>Lari</item>
		<item>Latvian Lats</item>
		<item>Lebanese Pound</item>
		<item>Lek</item>
		<item>Lempira</item>
		<item>Leone</item>
		<item>Liberian Dollar</item>
		<item>Libyan Dinar</item>
		<item>Lilangeni</item>
		<item>Lithuanian Litas</item>
		<item>Loti</item>
		<item>Malagasy Ariary</item>
		<item>Malaysian Ringgit</item>
		<item>Mauritius Rupee</item>
		<item>Mexican Peso</item>
		<item>Mexican Unidad de Inversion (UDI)</item>
		<item>Moldovan Leu</item>
		<item>Moroccan Dirham</item>
		<item>Mozambique Metical</item>
		<item>Mvdol</item>
		<item>Naira</item>
		<item>Nakfa</item>
		<item>Namibia Dollar</item>
		<item>Nepalese Rupee</item>
		<item>Netherlands Antillean Guilder</item>
		<item>New Israeli Sheqel</item>
		<item>New Romanian Leu</item>
		<item>New Taiwan Dollar</item>
		<item>New Zealand Dollar</item>
		<item>Ngultrum</item>
		<item>North Korean Won</item>
		<item>Norwegian Krone</item>
		<item>Nuevo Sol</item>
		<item>Ouguiya</item>
		<item>Pa’anga</item>
		<item>Pakistan Rupee</item>
		<item>Palladium</item>
		<item>Pataca</item>
		<item>Peso Convertible</item>
		<item>Peso Uruguayo</item>
		<item>Philippine Peso</item>
		<item>Platinum</item>
		<item>Pound Sterling</item>
		<item>Pula</item>
		<item>Qatari Rial</item>
		<item>Quetzal</item>
		<item>Rand</item>
		<item>Rial Omani</item>
		<item>Riel</item>
		<item>Rufiyaa</item>
		<item>Rupiah</item>
		<item>Russian Ruble</item>
		<item>Rwanda Franc</item>
		<item>Saint Helena Pound</item>
		<item>Saudi Riyal</item>
		<item>SDR (Special Drawing Right)</item>
		<item>Serbian Dinar</item>
		<item>Seychelles Rupee</item>
		<item>Silver</item>
		<item>Singapore Dollar</item>
		<item>Solomon Islands Dollar</item>
		<item>Som</item>
		<item>Somali Shilling</item>
		<item>Somoni</item>
		<item>South Sudanese Pound</item>
		<item>Sri Lanka Rupee</item>
		<item>Sucre</item>
		<item>Sudanese Pound</item>
		<item>Surinam Dollar</item>
		<item>Swedish Krona</item>
		<item>Swiss Franc</item>
		<item>Syrian Pound</item>
		<item>Taka</item>
		<item>Tala</item>
		<item>Tanzanian Shilling</item>
		<item>Tenge</item>
		<item>No currency</item>
		<item>Trinidad and Tobago Dollar</item>
		<item>Tugrik</item>
		<item>Tunisian Dinar</item>
		<item>Turkish Lira</item>
		<item>Turkmenistan New Manat</item>
		<item>UAE Dirham</item>
		<item>Uganda Shilling</item>
		<item>UIC-Franc</item>
		<item>Unidad de Valor Real</item>
		<item>Unidades de fomento</item>
		<item>Uruguay Peso en Unidades Indexadas (URUIURUI)</item>
		<item>US Dollar</item>
		<item>Uzbekistan Sum</item>
		<item>Vatu</item>
		<item>WIR Euro</item>
		<item>WIR Franc</item>
		<item>Won</item>
		<item>Yemeni Rial</item>
		<item>Yen</item>
		<item>Yuan Renminbi</item>
		<item>Zambian Kwacha</item>
		<item>Zimbabwe Dollar</item>
		<item>Zloty</item>
    </string-array>
	<string name="header_transaction_settings">Transactions</string>
	<string name="title_export_preference_category">Export</string>
	<string name="key_export_all_transactions">export_all_transactions</string>
	<string name="title_export_all_transactions">Export all transactions</string>
	<string name="key_delete_transactions_after_export">delete_transactions_after_export</string>
	<string name="title_always_delete_exported_transactions">Delete exported transactions</string>
	<string name="key_default_export_email">export_email_target</string>
	<string name="title_default_export_email">Default export email</string>
	<string name="summary_default_export_email">The default email address to send exports to. You can still change this when you export.</string>
</resources>